Fixed text cutoff in fakemain

--- a/src/app/components/fakemain/fakemain.component.css
+++ b/src/app/components/fakemain/fakemain.component.css
@@ -13,3 +13,7 @@
   height: 100vh;
   width: 100vw;
 }
+
+#coming-soon{
+  line-height: normal;
+}
